fixed security issues fix tickettitle exceeding div boundaries moved 3 dot menu to left so scrollbar doesn't effect it

--- a/src/app/ticket-container/ticket-container.component.scss
+++ b/src/app/ticket-container/ticket-container.component.scss
@@ -24,7 +24,7 @@
   border-radius: 2px;
   margin-bottom: 5px;
   color: white;
-  margin-left: 6%;
+  margin-right: 6%;
 }
 
 .ticket_dialog::backdrop {
