--- a/src/app/ticket/ticket.component.scss
+++ b/src/app/ticket/ticket.component.scss
@@ -1,6 +1,6 @@
 .severity_indicator{
   position: absolute;
-  width: 100%;
+  width: 96%;
   height: 10px;
   bottom: 0;
   border-bottom-left-radius: 3px;
